<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/result_font"
        android:gravity="right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button android:id="@+id/btnAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/AC"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_orange_light"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnPlusLess"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus_less"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_orange_light"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/percent"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_orange_light"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_green_dark"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnHeight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/height"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_green_dark"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnLess"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/less"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_green_dark"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_green_dark"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/zero"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/point"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="5dp"/>

        <Button android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="@dimen/medium_font"
            android:background="@android:color/holo_red_light"
            android:layout_margin="5dp"/>

    </LinearLayout>


</LinearLayout>
